# deepin-ai-daemon

./: CMakeLists.txt  aidaemon_global.h  install_dconfig.cmake
src/: CMakeLists.txt  main.cpp
src/daemon/: CMakeLists.txt  logcategory.cpp  main.cpp  qt5_6_compatible.h
src/daemon/common/: aitypes.cpp  aitypes.h
src/daemon/config/: dconfigmanager.cpp  dconfigmanager.h  modelprovidersconfig.cpp  modelprovidersconfig.h
src/daemon/config/private/: dconfigmanager_p.h
src/daemon/dbusserver/: dbusserver.cpp  dbusserver.h  embplatformdbus.cpp  embplatformdbus.h  modelinfodbus.cpp  modelinfodbus.h  querylangdbus.cpp  querylangdbus.h  sessionmanagerdbus.cpp  sessionmanagerdbus.h  vectorindexdbus.cpp  vectorindexdbus.h  vectorindexproxyer.cpp  vectorindexproxyer.h
src/daemon/dbusserver/apisession/: functioncallingsession.cpp  functioncallingsession.h  imagerecognitionsession.cpp  imagerecognitionsession.h  ocrsession.cpp  ocrsession.h  sessionbase.cpp  sessionbase.h  speechtotextsession.cpp  speechtotextsession.h  textchatsession.cpp  textchatsession.h  texttospeechsession.cpp  texttospeechsession.h
src/daemon/dbusserver/export/: org.deepin.ai.daemon.modelinfo.xml
src/daemon/dbusserver/sessionmanager/: sessionmanager.cpp  sessionmanager.h
src/daemon/indexcenter/database/: embeddatabase.cpp
src/daemon/indexcenter/index/: embeddingworker.cpp  index_define.h  indexmanager.cpp  indexworker.cpp
src/daemon/indexcenter/index/private/: embeddingworker_p.h  indexworker_p.h
src/daemon/indexcenter/index/vectorindex/: embedding.cpp  embedding.h  vectorindex.cpp  vectorindex.h
src/daemon/indexcenter/monitor/: filemonitor.cpp
src/daemon/indexcenter/parser/: abstractpropertyparser.cpp  audiopropertyparser.cpp  audiopropertyparser.h  imagepropertyparser.cpp  imagepropertyparser.h  videopropertyparser.cpp
src/daemon/modelcenter/: moddelfactory.cpp  moddelfactory.h  modelcenter.cpp  modelcenter.h  modelcenter_define.h  modelutils.cpp  modelutils.h
src/daemon/modelcenter/http/: httpaccessmanager.cpp  httpaccessmanager.h  httpeventloop.cpp  httpeventloop.h  httprequest.cpp  httprequest.h  httpresponse.cpp  httpresponse.h
src/daemon/modelcenter/interfaces/: abstractinterface.h  chatinterface.cpp  chatinterface.h  embeddinginterface.cpp  embeddinginterface.h  functioncallinginterface.cpp  functioncallinginterface.h  imagerecognitioninterface.cpp  imagerecognitioninterface.h  ocrinterface.cpp  ocrinterface.h  speechtotextinterface.cpp  speechtotextinterface.h  texttospeechinterface.cpp  texttospeechinterface.h
src/daemon/modelcenter/modelhub/: modelhubwrapper.cpp  modelhubwrapper.h
src/daemon/modelcenter/providers/: conversation.cpp  conversation.h  modelprovider.h
src/daemon/modelcenter/providers/baidu/: erniechat.cpp  erniechat.h  ernieconversation.cpp  ernieconversation.h  erniefunctioncalling.cpp  erniefunctioncalling.h  ernieprovider.cpp  ernieprovider.h  ernieprovider_p.h
src/daemon/modelcenter/providers/doubao/: doubaochat.cpp  doubaochat.h  doubaoembedding.cpp  doubaoembedding.h  doubaoprovider.cpp  (+4 more)
src/daemon/taskmanager/: taskmanager.cpp  taskmanager.h
src/daemon/threadpool/: threadpoolmanager.cpp  threadpoolmanager.h
src/daemon/utils/: resourcemanager.cpp  utils.cpp  utils.h
src/daemon/vectordb/: vectordb_define.h
src/daemon/vectordb/api/: vectordbinterface.cpp  vectordbinterface.h  vectordbreply.cpp  vectordbreply.h
src/daemon/vectordb/business/: vectordb.cpp  vectordb.h
src/daemon/vectordb/data/: datamanager.cpp  datamanager.h  documentdbwrapper.cpp  documentdbwrapper.h  documentinfo.cpp  documentinfo.h
src/daemon/vectordb/index/: faissindexwrapper.cpp  faissindexwrapper.h  indexcache.cpp  indexcache.h  vectoridmapper.cpp  vectoridmapper.h  vectorindexmanager.cpp  vectorindexmanager.h
src/daemon/vectordb/models/: embeddingmodel.cpp  embeddingmodel.h  modelrepository.cpp  modelrepository.h
src/daemon/vectordb/parsers/: abstractfileparser.cpp  abstractfileparser.h  ocrparser.cpp  ocrparser.h  officeparser.cpp  officeparser.h  parserfactory.cpp  parserfactory.h  parserresult.cpp  parserresult.h  pdfparser.cpp  pdfparser.h  textblobresult.cpp  textblobresult.h  textparser.cpp  textparser.h
src/daemon/vectordb/project/: projectdata.cpp  projectdata.h  projectdbwrapper.cpp  projectdbwrapper.h  projectmanager.cpp  projectmanager.h
src/daemon/vectordb/service/: serviceconfig.cpp  serviceconfig.h
src/daemon/vectordb/session/: session.cpp  session.h  sessionmanager.cpp  sessionmanager.h
src/daemon/vectordb/task/: stagebasedtaskmanager.cpp  stagebasedtaskmanager.h  stagetask.cpp  stagetask.h  workfloworchestrator.cpp  workfloworchestrator.h
src/daemon/vectordb/tools/: textchunker.cpp  textchunker.h
src/dbusserver/: analyzeserver.cpp  analyzeserverdbus.cpp  apiserverdbus.cpp  apiserverdbus.h  dbusserver.cpp  dbusserver.h  vectorindexdbus.cpp  vectorindexdbus.h
src/deployer/: CMakeLists.txt  logcategory.cpp  logcategory.h  main.cpp
src/deployer/gui/: deployerwidget.cpp  deployerwidget.h
src/deployer/gui/private/: localmodelitem.cpp  localmodelitem.h  localmodellistwidget.cpp  localmodellistwidget.h  themedlable.cpp  themedlable.h
src/deployer/gui/wrapper/: modelhubwrapper.cpp  modelhubwrapper.h
src/indexcenter/index/: embeddingworker.cpp  embeddingworker.h  indexmanager.cpp  indexmanager.h  indexworker.cpp
src/indexcenter/index/vectorindex/: embedding.cpp  vectorindex.cpp
src/indexcenter/monitor/: filemonitor.cpp
src/modelcenter/: modelcenter.cpp  modelcenter.h  modelcenter_define.h  modelutils.cpp  modelutils.h
src/modelcenter/interfaces/: abstractinterface.cpp  chatinterface.cpp  chatinterface.h
src/modelcenter/providers/: modelprovider.cpp  modelprovider.h
src/modelconfigtool/: CMakeLists.txt
src/modelconfigtool/src/: configmanager.cpp  configmanager.h  logcategory.cpp  logcategory.h  main.cpp  mainwindow.cpp  mainwindow.h  modelconfigdialog.cpp  modelconfigdialog.h  modelitem.cpp  modelitem.h
tests/embclient/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  testmail.cpp  testmail.h  testwidget.cpp  testwidget.h
(+56 files in other folders)
